#61 Implementation of traders selling items